--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~37.0.9",
     "expo-asset": "~8.1.0",
     "expo-constants": "~9.0.0",
+    "expo-file-system": "~8.1.0",
     "expo-font": "~8.1.0",
     "expo-image-picker": "~8.1.0",
     "expo-linking": "^1.0.1",
